--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <header class="header">
                         <div class="bg-header">
                             <div class="person">
-                                <img src="assets/images/ITM-Interior-Design (1).webp" width="200px" height="200px" alt="">
+                                <img id="photo" src="assets/images/ITM-Interior-Design (1).webp" width="200px" height="200px" alt="">
                             </div>
                           
                         </div>
@@ -62,20 +62,20 @@
 
                 <div id="herosection" class="detail">
                     <div class="container">
-                        <h3>melissa taylors</h3>
+                        <h3 id="name">melissa taylors</h3>
                         <h2>interior design</h2>
                         <h2>united kingdom</h2>
-                    <div class="d-flex gap-5 text-center justify-content-center align-items-center">
+                    <div id="result" class="d-flex gap-5 text-center justify-content-center align-items-center">
                         <div class="folow">
-                            <h3>120</h3>
+                            <h3  id="followers">120</h3>
                             <p>followers</p>
                         </div>
                         <div class="folow">
-                            <h3>67</h3>
+                            <h3  id="follow">120</h3>
                             <p>following</p>
                         </div>
                         <div class="folow">
-                            <h3>70k</h3>
+                            <h3  id="likes">120</h3>
                             <p>like</p>
                         </div>
                     </div>
@@ -97,13 +97,10 @@
                           </ul>
                           <div class="tab-content" id="myTabContent">
                             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                                <div class="d-flex flex-wrap  gap-5 mt-5 img-personal">
+                                <div id="imageContainer" class="d-flex flex-wrap  gap-5 mt-5 img-personal">
                                     <img src="assets/images/ITM-Interior-Design (1).webp" alt=""  >
                                     <img src="assets/images/ITM-Interior-Design (1).webp" alt="" >
-                                    <img src="assets/images/ITM-Interior-Design (1).webp" alt="" >
-                                    <img src="assets/images/ITM-Interior-Design (1).webp" alt="" >
-                                    <img src="assets/images/ITM-Interior-Design (1).webp" alt="" >
-                                    <img src="assets/images/ITM-Interior-Design (1).webp" alt="" >
+                                  
                                 </div>                    
                     </div>
                             <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quis dolorum modi, excepturi cum molestiae voluptas quia qui, voluptate sed nesciunt hic molestias dolorem laborum ipsam explicabo voluptatem atque neque!</p>
@@ -136,5 +133,6 @@
                 </footer>
 
                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+                <script src="assets/js/main.js"></script>
             </body>
 </html>
